cmake_minimum_required(VERSION 3.7)
project(corewar)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ft_printf/author
        ft_printf/check_flag.c
        ft_printf/choice_function.c
        ft_printf/ft_printf.c
        ft_printf/ft_printf.h
        ft_printf/function_c.c
        ft_printf/function_d.c
        ft_printf/function_o.c
        ft_printf/function_p.c
        ft_printf/function_s.c
        ft_printf/function_u.c
        ft_printf/function_wchar_t.c
        ft_printf/function_x.c
        ft_printf/itoa_base_type.c
        ft_printf/itoa_base_type_2.c
        ft_printf/itoa_d_type.c
        ft_printf/itoa_d_type_2.c
        ft_printf/libft_min.c
        ft_printf/libft_min_2.c
        ft_printf/libft_min_3.c
        ft_printf/libft_min_4.c
        ft_printf/libft_min_5.c
        ft_printf/libft_min_6.c
        ft_printf/libft_min_7.c
        libft/author
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nbrlen.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap_bits.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_wordcount.c
        libft/ft_wordlen.c
        libft/libft.a
        libft/libft.h
        libft/Makefile
        tmp/ex.cor
        tmp/ex.s
        trash/corewar/champs/championships/2014/bguy/sam_2.0.s
        trash/corewar/champs/championships/2014/bjacob/doge.s
        trash/corewar/champs/championships/2014/brandazz/Rainbow_dash.s
        trash/corewar/champs/championships/2014/cdivry/youforkmytralala.s
        trash/corewar/champs/championships/2014/clafleur/big_feet.s
        trash/corewar/champs/championships/2014/dcohen/loose.s
        trash/corewar/champs/championships/2014/ekocevar/mandragore.s
        trash/corewar/champs/championships/2014/esusseli/gedeon.s
        trash/corewar/champs/championships/2014/evlasova/terminator.s
        trash/corewar/champs/championships/2014/fcorre/ultimate-surrender.s
        trash/corewar/champs/championships/2014/gbir/_.s
        trash/corewar/champs/championships/2014/gjestin/salamahenagalabadoun.s
        trash/corewar/champs/championships/2014/gleger/Machine-gun.s
        trash/corewar/champs/championships/2014/gmange/corelol.s
        trash/corewar/champs/championships/2014/gpetrov/MarineKing.s
        trash/corewar/champs/championships/2014/gudepard/Kappa.s
        trash/corewar/champs/championships/2014/hmichals/Wall.s
        trash/corewar/champs/championships/2014/hmoutaou/Misaka_Mikoto.s
        trash/corewar/champs/championships/2014/kelickel/Varimathras.s
        trash/corewar/champs/championships/2014/kmonrose/justin_bee.s
        trash/corewar/champs/championships/2014/ldesgoui/_honeybadger.s
        trash/corewar/champs/championships/2014/lseguin/skynet.s
        trash/corewar/champs/championships/2014/lsirigna/live.s
        trash/corewar/champs/championships/2014/mbacoux/meowluigi.s
        trash/corewar/champs/championships/2014/mconraux/dubo.s
        trash/corewar/champs/championships/2014/rabid-on/jinx.s
        trash/corewar/champs/championships/2014/rmasse/THUNDER.s
        trash/corewar/champs/championships/2014/sbuono/Asombra.s
        trash/corewar/champs/championships/2014/srabah-m/littlepuppy.s
        trash/corewar/champs/championships/2014/tdemay/champ.s
        trash/corewar/champs/championships/2014/vrey/darksasuke.s
        trash/corewar/champs/championships/2014/ybouvet/casimir.s
        trash/corewar/champs/championships/2014/results.txt
        trash/corewar/champs/examples/bee_gees.s
        trash/corewar/champs/examples/bigzork.s
        trash/corewar/champs/examples/fluttershy.s
        trash/corewar/champs/examples/helltrain.s
        trash/corewar/champs/examples/turtle.s
        trash/corewar/champs/examples/zork.s
        trash/corewar/champs/42.cor
        trash/corewar/champs/42.s
        trash/corewar/champs/Backward.s
        trash/corewar/champs/barriere.s
        trash/corewar/champs/Car.s
        trash/corewar/champs/Death.s
        trash/corewar/champs/ex.cor
        trash/corewar/champs/ex.s
        trash/corewar/champs/Gagnant.s
        trash/corewar/champs/jumper.s
        trash/corewar/champs/lde.s
        trash/corewar/champs/leeloo.s
        trash/corewar/champs/mat.s
        trash/corewar/champs/maxidef.s
        trash/corewar/champs/mortel.s
        trash/corewar/champs/new.s
        trash/corewar/champs/Octobre_Rouge_V4.2.s
        trash/corewar/champs/sebc.s
        trash/corewar/champs/slider2.s
        trash/corewar/champs/Survivor.s
        trash/corewar/champs/tdc2.s
        trash/corewar/champs/tdc3.s
        trash/corewar/champs/tdc4.s
        trash/corewar/champs/Torpille.s
        trash/corewar/champs/toto.s
        trash/corewar/asm
        trash/corewar/corewar
        trash/h-corewar/asm
        trash/h-corewar/corewar
        trash/op.h
        asm.c
        asm.h
        head.c
        init.c
        lib_1.c)

add_executable(corewar ${SOURCE_FILES})